--- a/fastlite.ipynb
+++ b/fastlite.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "628dcc6a-5a70-487c-add3-e978e60ef319",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "1cc83674-cbd0-4f5d-920b-72139a6a1cce",
    "metadata": {},
    "outputs": [],
@@ -30,47 +30,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "d81f19ed-3512-4f9a-9100-9922df4fdd49",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "import fitz  # PyMuPDF\n",
     "from dataclasses import dataclass\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "from collections import Counter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "d00769ae-c950-440e-9359-e17c07c325ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@dataclass\n",
-    "class Highlight:\n",
-    "    text: str\n",
-    "    page: int\n",
-    "    color: tuple\n",
-    "    created: datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "67d25675-21d6-46bc-b17c-cb279eb39337",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = Path('pdf_test.pdf')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "id": "5f0bf2a9-4446-47ae-a9ce-f80a13d772df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m highlights \u001b[38;5;241m=\u001b[39m L()\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m fitz\u001b[38;5;241m.\u001b[39mopen(\u001b[43mpath\u001b[49m) \u001b[38;5;28;01mas\u001b[39;00m doc:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m page_num, page \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(doc, \u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m annot \u001b[38;5;129;01min\u001b[39;00m page\u001b[38;5;241m.\u001b[39mannots():\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'path' is not defined"
+     ]
+    }
+   ],
    "source": [
     "highlights = L()\n",
     "with fitz.open(path) as doc:\n",
@@ -91,32 +80,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "7d7632b0-ea15-4570-be75-c8c377dbdc10",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Highlight(text='соглашением,  преимущественную силу имеют настоящие условия, за  исключением случаев, когда \\nсоглашением прямо  предусмотрено внесение изменений в отдельные положения  настоящих условий. При', page=1, color=[1.0, 1.0, 0.0], created=datetime.datetime(2025, 11, 9, 21, 46, 26, 117944))"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "highlights[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "0e3cad3c-62f0-47aa-a962-238ee45acdd4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
+    "\n",
     "# Create/open database\n",
     "db = database('highlights.db')\n",
     "\n",
@@ -135,12 +115,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "4d5f7605-2c3b-4067-ab0f-eabcc44144cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to save highlights to database\n",
+    "#| export\n",
     "def save_highlights(pdf_path, highlights):\n",
     "    \"Save extracted highlights to database\"\n",
     "    pdf_name = Path(pdf_path).name\n",
@@ -156,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "094ca087-66a0-4dd6-a272-c1826c0453bc",
    "metadata": {},
    "outputs": [],
@@ -166,21 +146,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "06b96ef1-8843-4101-bb08-6317ff66104b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Highlight(id=1, text='соглашением,  преимущественную силу имеют настоящие условия, за  исключением случаев, когда \\nсоглашением прямо  предусмотрено внесение изменений в отдельные положения  настоящих условий. При', page=1, color='[1.0, 1.0, 0.0]', pdf_file='pdf_test.pdf', created='2025-11-09T21:46:26.117944')"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "highlights_db()[0]"
    ]
@@ -195,11 +164,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "32c6289a-827c-45d6-af51-119eb119bb6a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "def highlight_card(h):\n",
     "    # Parse color and convert to CSS\n",
     "    color_rgb = eval(h.color)\n",
@@ -248,24 +218,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "16101359-1a0c-45eb-94d6-aedabe9654b7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "# Initialize FastHTML app with MonsterUI theme\n",
     "app, rt = fast_app(hdrs=Theme.blue.headers())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "1e688e5f-d231-479a-a6b5-54f1f40c9379",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import Counter\n",
-    "\n",
+    "#| export\n",
     "@app.route('/')\n",
     "def index():\n",
     "    pdf_counts = Counter(h.pdf_file for h in highlights_db())\n",
@@ -274,7 +244,7 @@
     "        Card(\n",
     "            H3(pdf_name),\n",
     "            P(f'{count} highlights', cls=TextPresets.muted_sm),\n",
-    "            footer = ButtonT.primary(\"View Highlights\",\n",
+    "            footer = Button(\"View Highlights\",\n",
     "                                     hx_get=f\"/pdf/{pdf_name}\",\n",
     "                                     hx_target=\"#main-content\",\n",
     "                                     cls=ButtonT.primary),\n",
@@ -311,25 +281,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57b9fa91-05f0-487a-8386-10afe01581c7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9cd7ec01-33a5-45b2-9b3a-37b8e421026c",
+   "id": "0ed81ad5-a240-45e6-8f62-d28bb4084b62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "highlights_db"
+    "#| export\n",
+    "@app.route('/pdf/{pdf_name}')\n",
+    "def view_pdf(pdf_name:str):\n",
+    "    highlights = highlights_db(where=f\"pdf_file='{pdf_name}'\", order_by='page')\n",
+    "    cards = [highlight_card(h) for h in highlights]\n",
+    "\n",
+    "    return Div(\n",
+    "        DivFullySpaced(\n",
+    "            H2(pdf_name),\n",
+    "            Button(\"← Back\", hx_get=\"/\", hx_target=\"#main-content\", cls=ButtonT.ghost)\n",
+    "        ),\n",
+    "        Div(*cards, cls='space-y-4')\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc0072f6-a64c-4a05-ae1a-30338d5a2024",
+   "id": "fe03c16d-aaff-4b82-8943-68deaece4bce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "@app.route('/upload', methods=['POST'])\n",
+    "async def upload(pdf_file: UploadFile):\n",
+    "    content = await pdf_file.read()\n",
+    "\n",
+    "    new_highlights = extract_highlights(content)\n",
+    "    save_highlights(pdf_file.filename, new_highlights)\n",
+    "    \n",
+    "    return Div(\n",
+    "        Alert(\n",
+    "            f\"Successfully extracted {len(new_highlights)} highlights from {pdf_file.filename}!\",\n",
+    "            cls=AlertT.success\n",
+    "        ),\n",
+    "        # Trigger a refresh to show the new PDF card\n",
+    "        Div(hx_get=\"/\", hx_trigger=\"load delay:2s\", hx_target=\"#main-content\")\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c83c60f-b852-490d-a778-3156f7e04a6e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -337,7 +336,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ed81ad5-a240-45e6-8f62-d28bb4084b62",
+   "id": "99ca6997-3ffb-4c93-a3f2-30a83b121f61",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ddba726-9ceb-471e-b92e-92540511c773",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -382,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "94dd1f80-b6a0-47a7-81fd-2967a27166e1",
    "metadata": {},
    "outputs": [],
