--- a/fasthlight.ipynb
+++ b/fasthlight.ipynb
@@ -413,26 +413,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 154,
    "id": "4d5f7605-2c3b-4067-ab0f-eabcc44144cb",
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
     "def save_highlights(pdf_path, highlights, user_id):\n",
-    "    \"Save extracted highlights to database\"\n",
+    "    \"Save extracted highlights to database using a transaction (all or nothing)\"\n",
     "    pdf_name = pdf_basename(pdf_path)\n",
-    "    for h in highlights:\n",
-    "        highlights_db.insert(\n",
-    "            user_id=user_id,\n",
-    "            text=h.text,\n",
-    "            page=h.page,\n",
-    "            color=h.color,  # Convert tuple to string\n",
-    "            source=pdf_name,\n",
-    "            source_type='pdf',\n",
-    "            title=f\"{pdf_name}.pdf\",\n",
-    "            created=h.created.isoformat()\n",
-    "        )"
+    "\n",
+    "    try:\n",
+    "        conn = highlights_db.db.conn\n",
+    "\n",
+    "        with conn:\n",
+    "            for h in highlights:\n",
+    "                highlights_db.insert(\n",
+    "                    user_id=user_id,\n",
+    "                    text=h.text,\n",
+    "                    page=h.page,\n",
+    "                    color=h.color,  # Convert tuple to string\n",
+    "                    source=pdf_name,\n",
+    "                    source_type='pdf',\n",
+    "                    title=f\"{pdf_name}.pdf\",\n",
+    "                    created=h.created.isoformat()\n",
+    "                )\n",
+    "        return True, None\n",
+    "    except Execption as e: return False, f\"Failed to save highlights: {str(e)}\""
    ]
   },
   {
@@ -667,6 +674,83 @@
    "source": [
     "# Routes"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5da896a-694c-48d9-8a66-e834564bfbf4",
+   "metadata": {},
+   "source": [
+    "# Helpers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "240b6f64-8256-4273-ae05-03f5af472f48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validate_web_highlight(text, url, title) -> tuple:\n",
+    "    \"\"\"Validate web highlight data\n",
+    "    Returns tuple of (is_valid, error_message, cleaned_data)\n",
+    "    \"\"\"\n",
+    "    import re\n",
+    "    from urllib.parse import urlparse\n",
+    "\n",
+    "    # validate text\n",
+    "    text = text.strip()\n",
+    "    if not text: return False, 'Highlight text cannot be empty', None\n",
+    "    if len(text) > 10000: return False, 'Highlight text too long (max 10,000 characters)', None\n",
+    "\n",
+    "    # Validate color\n",
+    "    if not re.match(r'^#[0-9A-Fa-f]{6}$', color): color = '#ffff00'  # Default to yellow\n",
+    "\n",
+    "    # Validate URL\n",
+    "    url = url.strip()\n",
+    "    if not url: return False, 'URL cannot be empty', None\n",
+    "    if not url.startswith(('http://', 'https://')): return False, 'Invalid URL format', None\n",
+    "    if len(url) > 2000: return False, 'URL too long', None\n",
+    "\n",
+    "    # Validate | fix title\n",
+    "    title = title.strip()\n",
+    "    if len(title) > 500: title = title[:500]\n",
+    "    if not title:\n",
+    "        try:\n",
+    "            title = urlparse(url).netloc or url\n",
+    "        except:\n",
+    "            title = url\n",
+    "\n",
+    "    return True, None, {\n",
+    "        'text': text,\n",
+    "        'url': url,\n",
+    "        'color': color,\n",
+    "        'title': title\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dd84c9f-8d86-4836-9d42-332c9a8e1304",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "118af0aa-2d23-47db-bb77-aea49fad6fd9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b213e5d-64b1-4111-a443-b179481c239e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -966,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 155,
    "id": "fe03c16d-aaff-4b82-8943-68deaece4bce",
    "metadata": {},
    "outputs": [],
@@ -980,8 +1064,10 @@
     "\n",
     "        if error: return Alert(f\"Could not extract highlights: {error}\", cls=AlertT.error)\n",
     "        if not new_highlights: return Alert(\"No highlights found in this PDF\", cls=AlertT.warning)\n",
-    "        save_highlights(pdf_file.filename, new_highlights, user.id)\n",
-    "    \n",
+    "        \n",
+    "        success, error = save_highlights(pdf_file.filename, new_highlights, user.id)\n",
+    "        if not success: return Alert(f\"Failed to save highlights: {error}\", cls=AlertT.error)\n",
+    "        \n",
     "        return Div(\n",
     "            Alert(\n",
     "                DivVStacked(\n",
@@ -998,7 +1084,7 @@
     "            Div(hx_get=\"/\", hx_trigger=\"load delay:2s\", hx_target=\"#main-content\")\n",
     "        )\n",
     "        \n",
-    "    except Exception as e: return Alert(f\"Error: {str(e)}\", cls=AlertT.error)"
+    "    except Exception as e: return Alert(f\"Unexpected error: {str(e)}\", cls=AlertT.error)"
    ]
   },
   {
@@ -1011,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 159,
    "id": "445abe78-4e6b-4ae0-89ca-1341945f0b9c",
    "metadata": {},
    "outputs": [],
@@ -1024,17 +1110,23 @@
     "\n",
     "    user = get_current_user(session)\n",
     "    if not user: return {'status': 'error', 'message': 'Not authenticated. Please log in first.'}\n",
-    "    \n",
-    "    highlights_db.insert(\n",
-    "        user_id=user.id,\n",
-    "        text=text,\n",
-    "        color=color,\n",
-    "        source=url,\n",
-    "        source_type='web',\n",
-    "        title=title or url,\n",
-    "        created=datetime.now().isoformat()\n",
-    "    )\n",
-    "    return {'status': 'success', 'message': 'Highlight saved!'}"
+    "\n",
+    "    is_valid, error, data = validate_web_highlight(text, url, color, title)\n",
+    "    if not is_valid: return {'status': 'error', 'message': error}\n",
+    "    try:\n",
+    "        \n",
+    "        highlights_db.insert(\n",
+    "            user_id=user.id,\n",
+    "            text=text,\n",
+    "            color=color,\n",
+    "            source=url,\n",
+    "            source_type='web',\n",
+    "            title=title or url,\n",
+    "            created=datetime.now().isoformat()\n",
+    "        )\n",
+    "        return {'status': 'success', 'message': 'Highlight saved!'}\n",
+    "    except Exception as r:\n",
+    "        return {'status': 'error', 'message': f'Failed to save: {str(e)}'}"
    ]
   },
   {
