--- a/fasthlight_updated.ipynb
+++ b/fasthlight_updated.ipynb
@@ -25,6 +25,7 @@
     "import os\n",
     "import logging\n",
     "from dotenv import load_dotenv\n",
+    "import re\n",
     "\n",
     "# Configure logging\n",
     "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
@@ -175,6 +176,9 @@
     "    highlights_per_page: int = 50\n",
     "    sources_per_page: int = 20\n",
     "\n",
+    "    # Title length\n",
+    "    max_text_length = 200\n",
+    "\n",
     "    def __post_init__(self):\n",
     "        if self.allowed_file_types is None: self.allowed_file_types = ['.pdf']\n",
     "\n",
@@ -270,7 +274,7 @@
     {
      "data": {
       "text/plain": [
-       "HighlightData(text='соглашением,  преимущественную силу имеют настоящие условия, за  исключением случаев, когда \\nсоглашением прямо  предусмотрено внесение изменений в отдельные положения  настоящих условий. При', page=1, color=[1.0, 1.0, 0.0], created=datetime.datetime(2026, 1, 10, 9, 21, 45, 762781))"
+       "HighlightData(text='соглашением,  преимущественную силу имеют настоящие условия, за  исключением случаев, когда \\nсоглашением прямо  предусмотрено внесение изменений в отдельные положения  настоящих условий. При', page=1, color=[1.0, 1.0, 0.0], created=datetime.datetime(2026, 1, 10, 12, 35, 19, 561307))"
       ]
      },
      "execution_count": 11,
@@ -339,7 +343,7 @@
     "        doc = fitz.open(pdf) if isinstance(pdf, Path) else fitz.open(stream=pdf, filetype='pdf')\n",
     "\n",
     "        # check if pdf is encrypted | protected by password\n",
-    "        if doc.is_encrypted: return highlights, \"PDF is protected. Please remove the password first.\"\n",
+    "        if doc.is_encrypted: return False, \"PDF is protected. Please remove the password first.\"\n",
     "            \n",
     "        for page_num in range(len(doc)):\n",
     "            page = doc[page_num]\n",
@@ -441,11 +445,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Procfile                 fasthlight.py            highlights.db-wal\n",
+      "Procfile                 fasthlight.ipynb         highlights.db-shm\n",
+      "Py2JL.py                 fasthlight.py            highlights.db-wal\n",
       "\u001b[1m\u001b[34m__pycache__\u001b[m\u001b[m              fasthlight_upd.ipynb     key.pem\n",
       "cert.pem                 fasthlight_updated.ipynb pdf_test.pdf\n",
-      "fasthlight-CC.py         highlights.db            requirements.txt\n",
-      "fasthlight.ipynb         highlights.db-shm\n"
+      "fasthlight-CC.py         highlights.db            requirements.txt\n"
      ]
     }
    ],
@@ -462,7 +466,7 @@
     {
      "data": {
       "text/plain": [
-       "<apsw.Cursor at 0x11a626a30>"
+       "<apsw.Cursor at 0x12e426a30>"
       ]
      },
      "execution_count": 17,
@@ -555,15 +559,15 @@
     "#| export\n",
     "def pdf_basename(filename):\n",
     "    \"\"\"Get filename without extension and sanitize for security\"\"\"\n",
-    "    import re\n",
     "    # Get just the filename (removes any path components)\n",
-    "    base = Path(filename).name\n",
+    "    # base = Path(filename).name\n",
     "    # Remove extension\n",
-    "    stem = Path(base).stem\n",
+    "    # stem = Path(base).stem\n",
     "    # Remove any dangerous characters, keep only alphanumeric, spaces, hyphens, underscores\n",
-    "    sanitized = re.sub(r'[^\\w\\s\\-]', '', stem)\n",
+    "    # sanitized = re.sub(r'[^\\w\\s\\-]', '', stem)\n",
     "    # Limit length to prevent issues\n",
-    "    return sanitized[:255] if sanitized else 'untitled'"
+    "    # return sanitized[:255] if sanitized else 'untitled'\n",
+    "    return Path(filename).stem"
    ]
   },
   {
@@ -595,7 +599,7 @@
     "                    user_id=user_id,\n",
     "                    text=h.text,\n",
     "                    page=h.page,\n",
-    "                    color=h.color,  # Convert tuple to string\n",
+    "                    color=h.color,\n",
     "                    source=pdf_name,\n",
     "                    source_type='pdf',\n",
     "                    title=f\"{pdf_name}.pdf\",\n",
@@ -1111,11 +1115,7 @@
    "cell_type": "code",
    "execution_count": 41,
    "id": "32c6289a-827c-45d6-af51-119eb119bb6a",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
@@ -1126,6 +1126,8 @@
     "    location_info = _get_location_info(h)\n",
     "    color_strip = _get_color_strip(h.color)\n",
     "\n",
+    "    truncated_text = h.text[:AppConfig.max_title_length] + '...' if len(h.text>AppConfig.max_title_length) else h.text\n",
+    "    \n",
     "    return Card(\n",
     "        # Color indicator strip - using inline style instead of Tailwind classes\n",
     "        color_strip,\n",
@@ -1163,7 +1165,7 @@
     {
      "data": {
       "text/plain": [
-       "<apsw.Cursor at 0x11b5eb060>"
+       "<apsw.Cursor at 0x13f04b060>"
       ]
      },
      "execution_count": 42,
@@ -1233,7 +1235,7 @@
     {
      "data": {
       "text/plain": [
-       "'$argon2id$v=19$m=65536,t=3,p=4$pfmp4lYwBhndLWxihRimAQ$9GRZgDxXbddEeN5ADzkalChbsBa7RzMXdTYEL/Lpk24'"
+       "'$argon2id$v=19$m=65536,t=3,p=4$hTKeQoWD1fR3EranoM9Kqw$1gzkQkOvna/GrHlKTfT1OqvxsRIuPi7621n6Dcq19KU'"
       ]
      },
      "execution_count": 45,
@@ -1574,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 72,
    "id": "f52f8082-d9c2-417f-a5fd-8399631eb206",
    "metadata": {},
    "outputs": [],
@@ -1602,7 +1604,8 @@
     "            H2(source),\n",
     "            Button(\"← Back\", hx_get=\"/\", hx_target=\"#main-content\", cls=ButtonT.ghost)\n",
     "        ),\n",
-    "        Div(*cards, cls='space-y-4')\n",
+    "        # Div(*cards, cls='space-y-4')\n",
+    "        Grid(*cards, cols=1, cols_md=2, cols_lg=3, cls=\"gap-4\")\n",
     "    )"
    ]
   },
@@ -2011,10 +2014,19 @@
     "                color: '#ffff00'\n",
     "            }})\n",
     "        }})\n",
-    "        .then(r => r.json())\n",
-    "        .then(d => alert(d.message))\n",
-    "        .catch(e => alert('❌ Error: ' + e));\n",
-    "    }})();\n",
+    "        .then(r => {{\n",
+    "            const contentType = r.headers.get('content-type') || '';\n",
+    "            if (contentType.includes('text/html')) {{\n",
+    "                throw new Error('Please log in at {base_url} first');\n",
+    "            }}\n",
+    "            if (!r.ok) throw new Error('Server error: ' + r.status);\n",
+    "            return r.json();\n",
+    "        }})\n",
+    "        .then(d => {{\n",
+    "            if (d.status === 'success') alert('✅ ' + d.message);\n",
+    "            else alert('❌ ' + (d.message || 'Failed to save'));\n",
+    "        }})\n",
+    "        .catch(e => alert('❌ ' + e.message));\n",
     "    \"\"\"\n",
     "    \n",
     "    bookmarklet_link = A(\n",
@@ -2051,18 +2063,18 @@
      "text": [
       "\n",
       "🔍 Registered routes:\n",
-      "  /{fname:path}.{ext:static} - ['HEAD', 'GET', 'POST']\n",
-      "  / - ['HEAD', 'GET', 'POST']\n",
-      "  /source/{source:path} - ['HEAD', 'GET', 'POST']\n",
+      "  /{fname:path}.{ext:static} - ['POST', 'HEAD', 'GET']\n",
+      "  / - ['POST', 'HEAD', 'GET']\n",
+      "  /source/{source:path} - ['POST', 'HEAD', 'GET']\n",
       "  /upload - ['POST']\n",
       "  /api/highlight - ['POST']\n",
       "  /login - ['HEAD', 'GET']\n",
-      "  /redirect-home - ['HEAD', 'GET', 'POST']\n",
+      "  /redirect-home - ['POST', 'HEAD', 'GET']\n",
       "  /login - ['POST']\n",
       "  /signup - ['HEAD', 'GET']\n",
       "  /signup - ['POST']\n",
-      "  /logout - ['HEAD', 'GET', 'POST']\n",
-      "  /bookmarklet - ['HEAD', 'GET', 'POST']\n",
+      "  /logout - ['POST', 'HEAD', 'GET']\n",
+      "  /bookmarklet - ['POST', 'HEAD', 'GET']\n",
       "\n"
      ]
     }
@@ -2099,19 +2111,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 69,
    "id": "104ac55c-0a13-4927-98bc-260007f71f37",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'server' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[69], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m server\u001b[38;5;241m.\u001b[39mstop()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'server' is not defined"
+     ]
+    }
+   ],
    "source": [
     "server.stop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 70,
    "id": "b8a535d5-3765-4fa4-8235-6ee891d266f6",
    "metadata": {
     "scrolled": true
@@ -2143,10 +2167,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "278194f0-5d67-407b-bf83-9938e27e3816",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"http://localhost:8000/\" style=\"width: 100%; height: auto; border: none;\" onload=\"{\n",
+       "        let frame = this;\n",
+       "        window.addEventListener('message', function(e) {\n",
+       "            if (e.source !== frame.contentWindow) return; // Only proceed if the message is from this iframe\n",
+       "            if (e.data.height) frame.style.height = (e.data.height+1) + 'px';\n",
+       "        }, false);\n",
+       "    }\" allow=\"accelerometer; autoplay; camera; clipboard-read; clipboard-write; display-capture; encrypted-media; fullscreen; gamepad; geolocation; gyroscope; hid; identity-credentials-get; idle-detection; magnetometer; microphone; midi; payment; picture-in-picture; publickey-credentials-get; screen-wake-lock; serial; usb; web-share; xr-spatial-tracking\"></iframe> "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2026-01-10 12:36:22,624 - INFO - Unauthenticated user - redirecting to /login\n",
+      "2026-01-10 12:36:57,875 - INFO - Signup attempt for email: iva***\n",
+      "2026-01-10 12:36:57,925 - INFO - User created successfully: 4\n"
+     ]
+    }
+   ],
    "source": [
     "HTMX()"
    ]
